--- a/self-driving-car/index.html
+++ b/self-driving-car/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas id="myCanvas"></canvas>
-    <script src="main.js"></script>
+    <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+        <button id="save">💾</button>
+        <button id="discard">🗑️</button>
+    </div>
+    <canvas id="networkCanvas"></canvas>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
